kubernetes/raspberry/media/booklore/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: booklore
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Media
    gethomepage.dev/name: BookLore
    gethomepage.dev/icon: booklore.png
spec:
  parentRefs:
    - name: external
      namespace: network
      sectionName: https
  hostnames:
    - "booklore.${SECRET_DOMAIN}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: derived-al2nobhnbj
          port: 6060
