kubernetes/raspberry/media/booklore/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: booklore
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
spec:
  ingressClassName: external
  rules:
    - host: &host "booklore.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: derived-al2nobhnbj
                port:
                  number: 6060
  tls:
    - hosts:
        - *host
